--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,36 @@
+blis==0.4.1
+boto==2.49.0
+boto3==1.12.19
+botocore==1.15.19
+catalogue==1.0.0
+certifi==2019.11.28
+chardet==3.0.4
+cymem==2.0.3
+docutils==0.15.2
+fr-core-news-sm==2.2.5
+gensim==3.8.1
+idna==2.9
+importlib-metadata==1.5.0
+jmespath==0.9.5
+murmurhash==1.0.2
 nltk==3.4.5
+numpy==1.18.1
+plac==1.1.3
+preshed==3.0.2
+python-dateutil==2.8.1
+rake-nltk==1.0.4
+requests==2.23.0
+s3transfer==0.3.3
+scipy==1.4.1
 six==1.14.0
+smart-open==1.9.0
+spacy==2.2.3
+srsly==1.0.2
 textblob==0.15.3
+textblob-ar-mk==0.0.2
+thinc==7.3.1
+tqdm==4.43.0
+urllib3==1.25.8
+wasabi==0.6.0
+xx-ent-wiki-sm==2.2.0
+zipp==3.1.0
