--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 atomicwrites==1.3.0
 attrs==19.3.0
+backports.csv==1.0.7
+beautifulsoup4==4.9.0
 blis==0.4.1
 boto==2.49.0
 boto3==1.12.19
@@ -7,48 +9,74 @@ botocore==1.15.19
 catalogue==1.0.0
 certifi==2019.11.28
 chardet==3.0.4
+cheroot==8.3.0
+CherryPy==18.6.0
 click==7.1.1
 colorama==0.4.3
 cymem==2.0.3
 docutils==0.15.2
 en-core-web-sm==2.2.5
 ez-setup==0.9
+feedparser==5.2.1
 Flask==1.1.1
 fr-core-news-sm==2.2.5
+future==0.18.2
 gensim==3.8.1
 idna==2.9
 importlib-metadata==1.5.0
 itsdangerous==1.1.0
+jaraco.classes==3.1.0
+jaraco.collections==3.0.0
+jaraco.functools==3.0.0
+jaraco.text==3.2.0
 Jinja2==2.11.1
 jmespath==0.9.5
 langdetect==1.0.7
+lxml==4.5.0
 MarkupSafe==1.1.1
 more-itertools==8.2.0
 murmurhash==1.0.2
+mysqlclient==1.4.6
 nltk==3.4.5
 numpy==1.18.1
 packaging==20.3
+Pattern==3.6
+pdfminer.six==20200402
 plac==1.1.3
 pluggy==0.13.1
 polyglot==16.7.4
+portend==2.6
 preshed==3.0.2
+psutil==5.7.0
 py==1.8.1
 pycld2==0.41
+pycryptodome==3.9.7
+pyenchant==3.0.1
 PyICU==2.4.2
 pyparsing==2.4.6
 pytest==5.4.1
 python-dateutil==2.8.1
+python-docx==0.8.10
+pytz==2019.3
+pywin32==227
+PyYAML==5.3.1
 rake-nltk==1.0.4
 requests==2.23.0
 s3transfer==0.3.3
 scipy==1.4.1
 six==1.14.0
 smart-open==1.9.0
+sortedcontainers==2.1.0
+soupsieve==2.0
 spacy==2.2.3
 spacy-langdetect==0.1.2
+spacy-wordnet==0.0.4
 srsly==1.0.2
+stanfordcorenlp==3.9.1.1
+tempora==3.0.0
 textblob==0.15.3
 textblob-ar-mk==0.0.2
+textblob-fr==0.2.0
 thinc==7.3.1
 tqdm==4.43.0
 urllib3==1.25.8
@@ -57,4 +85,5 @@ wasabi==0.6.0
 wcwidth==0.1.9
 Werkzeug==1.0.0
 xx-ent-wiki-sm==2.2.0
+zc.lockfile==2.0
 zipp==3.1.0
